# 3D_Viewer_cc

./: README.md
src/: 3D_Viewer.pro  CMakeLists.txt  Makefile
src/core/: parser.c  parser.h  structs.h  transform.c  transform.h
src/instruction/: docs.html
src/test/: test.c
src/view/: colorsettings.h  glview.cc  glview.cpp  glview.h  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/viewer_controller/: viewer_controller.cc  viewer_controller.h
src/viewer_model/: parser.cc  parser.h  transform.cc  transform.h  viewer_model.cc  viewer_model.h
src/viewer_view/: colorsettings.h  glview.cc  glview.h  mainwindow.cc  mainwindow.h  mainwindow.ui
tests/: test.h  test_amount.cc  test_parse.cc  test_transform.cc
